<resources>
    <string name="app_name">Skychat</string>
    <string name="title_activity_login">Sign in to Stardust</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Stardust Address (user@domain)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This address doesn\'t look like an email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_client_bug">Sorry, I messed up and couldn\'t process your request</string>
    <string name="error_server_bug">Sorry, the server misbehaved</string>
    <string name="report_bug">Report bug</string>
    <string name="confirm_report_sent">Protocol miscommunication report has been sent, thanks!</string>

    <string name="title_activity_profiles">Stardust Profiles</string>
    <string name="desc_saved_profile">Saved profile</string>

    <string name="title_activity_chat">Skychat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Stardust User</string>
    <string name="nav_header_subtitle">you@bees.network</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_irc_settings">IRC settings</string>
    <string name="action_app_settings">App preferences</string>
    <string name="action_add_account">Add account</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="preference_state_file_key">app.skychat.client.STATE</string>
    <string name="preference_current_profile">currentProfile</string>
    <string name="send_message">Send message</string>
    <string name="write_a_message">Write a message</string>
    <string name="switch_account">Switch account</string>
    <string name="ftue_welcome">Welcome to Skychat!</string>
    <string name="ftue_intro">This app connects to a Stardust account on a remote server. Once you add an account, you\'ll be presented with a modern chat experience that is backed by the server. In other words, this Android application is NOT a stand-alone chat system. It requires an existing Skychat account to be usable.</string>
    <string name="ftue_get_started">Have an account? Great, let\'s get started 🙂</string>
    <string name="ftue_add_account">Add existing account</string>
</resources>
